--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "js/main.js",
   "dependencies": {
+    "flux": "^2.0.3",
+    "keymirror": "^0.1.1",
+    "object-assign": "^2.0.0",
     "react": "^0.13.2",
     "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
